--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,7 @@ base {
 }
 
 repositories {
-    maven { url = 'https://minecraft.curseforge.com/api/maven' }
-    maven { url = 'https://maven.shedaniel.me/' }
 	maven { url = 'https://maven.terraformersmc.com/'}
-	maven { url 'https://jitpack.io' }
 	maven { url = 'https://maven.wispforest.io/releases/'}
 }
 
@@ -23,33 +20,15 @@ loom {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
-
-    // Config
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
-		exclude(group: "net.fabricmc.fabric-api")
-	}
-
-    // Config jar-in-jar
-    include "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
-
-    // not required, but we want to see our config screen
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_config_version}")
 
-	// Twitch bridge
-	implementation "com.github.twitch4j:twitch4j:${project.twitch4j_version}"
-	include "com.github.twitch4j:twitch4j:${project.twitch4j_version}"
-
+	implementation include("com.github.twitch4j:twitch4j:${project.twitch4j_version}")
 }
 
 processResources {
