--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ archives_base_name=twitchchatbridge
 
 # Dependencies
 fabric_version=0.111.0+1.21.4
-mod_menu_version=13.0.0-beta.1
+modmenu_version=13.0.0-beta.1
 owo_config_version=0.12.20+1.21.4
 twitch4j_version=1.24.0
