fix(build): properly implement dependencies

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,6 +106,10 @@ jobs:
                 "dependency_type": "required"
               },
               {
+                "project_id": "CmHD69Pj",
+                "dependency_type": "required"
+              },
+              {
                 "project_id": "mOgUt4GM",
                 "dependency_type": "optional"
               }
