--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ archives_base_name=twitchchatbridge
 fabric_version=0.111.0+1.21.4
 modmenu_version=13.0.0-beta.1
 owo_config_version=0.12.20+1.21.4
-twitch4j_version=1.24.0
+twitch4j_version=1.24.0+1.10.0
