--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ archives_base_name=twitchchatbridge
 
 # Dependencies
 fabric_version=0.119.6+1.21.5
-modmenu_version=13.0.0-beta.1
+modmenu_version=14.0.0-rc.2
 owo_config_version=0.12.20+1.21.5
 twitch4j_version=1.24.0+1.10.0
