--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+minecraft_version=1.21.6
+yarn_version=build.1
+loader_version=0.16.14
 
 loom_version=1.10-SNAPSHOT
 
@@ -16,7 +16,7 @@ maven_group=de.kesuaheli
 archives_base_name=twitchchatbridge
 
 # Dependencies
-fabric_version=0.119.6+1.21.5
-modmenu_version=14.0.0-rc.2
-owo_config_version=0.12.20+1.21.5
-twitch4j_version=1.24.0+1.10.0
+fabric_version=0.127.0+1.21.6
+modmenu_version=15.0.0-beta.1
+owo_config_version=0.12.21+1.21.6
+twitch4j_version=1.25.0+1.11.0
